feat: Unit 2 deployment successful - WebSocket API working
- Deployed Unit 2 (AgentCore & Orchestration) to AWS
- Fixed tag validation issues (removed '&' character)
- WebSocket API deployed and tested successfully
- 3 Lambda functions: connect, disconnect, message
- DynamoDB sessions table created
- S3 assets bucket configured
- EventBridge bus ready
- WebSocket connection test passed with JWT validation
- Session management working correctly

Stack: centli-hackathon
Region: us-east-1
WebSocket URL: wss://vvg621xawg.execute-api.us-east-1.amazonaws.com/prod

Next: Configure Bedrock AgentCore and continue with Unit 3

--- a/.gitignore
+++ b/.gitignore
@@ -307,6 +307,14 @@ gen2/
 # Deployment artifacts
 deployment-artifacts/
 
+# Test scripts
+test-websocket.js
+generate-test-jwt.js
+
+# Package files
+package.json
+package-lock.json
+
 # ============================================================================
 # Keep These Files (Exceptions)
 # ============================================================================
