--- a/template.yaml
+++ b/template.yaml
@@ -236,7 +236,7 @@ Resources:
       Tags:
         Project: CENTLI
         Environment: !Ref Environment
-        Unit: AgentCore & Orchestration
+        Unit: AgentCoreOrchestration
   
   # WebSocket Stage
   CentliWebSocketStage:
@@ -284,7 +284,7 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
         - Key: Unit
-          Value: AgentCore & Orchestration
+          Value: AgentCoreOrchestration
   
   # Lambda Function: Connect Handler
   ConnectFunction:
@@ -298,7 +298,7 @@ Resources:
         Variables:
           SESSIONS_TABLE: !Ref CentliSessionsTable
       Tags:
-        Unit: AgentCore & Orchestration
+        Unit: AgentCoreOrchestration
   
   # Lambda Function: Disconnect Handler
   DisconnectFunction:
@@ -312,7 +312,7 @@ Resources:
         Variables:
           SESSIONS_TABLE: !Ref CentliSessionsTable
       Tags:
-        Unit: AgentCore & Orchestration
+        Unit: AgentCoreOrchestration
   
   # Lambda Function: Message Handler
   MessageFunction:
@@ -329,7 +329,7 @@ Resources:
           AGENTCORE_ID: ''  # To be updated after Bedrock Agent creation
           ASSETS_BUCKET: !Ref CentliAssetsBucket
       Tags:
-        Unit: AgentCore & Orchestration
+        Unit: AgentCoreOrchestration
   
   # WebSocket Routes and Integrations
   ConnectRoute:
@@ -460,7 +460,7 @@ Outputs:
     Description: AWS Account ID
     Value: !Ref AWS::AccountId
   
-  # Unit 2 Outputs - AgentCore & Orchestration
+  # Unit 2 Outputs - AgentCoreOrchestration
   WebSocketURL:
     Description: WebSocket API URL for real-time communication
     Value: !Sub 'wss://${CentliWebSocketAPI}.execute-api.${AWS::Region}.amazonaws.com/prod'
