feat: Bedrock AgentCore configured and working
- Enabled Claude 3.5 Sonnet v2 via inference profile
- Updated agent to use inference profile (us.anthropic.claude-3-5-sonnet-20241022-v2:0)
- Created agent version 2 with correct configuration
- Updated CentliBedrockAgentRole with inference profile permissions
- Agent successfully responding via WebSocket and direct invocation
- Added Bedrock setup documentation and troubleshooting guides
- Updated .gitignore to exclude test scripts and venv

--- a/.gitignore
+++ b/.gitignore
@@ -310,6 +310,19 @@ deployment-artifacts/
 # Test scripts
 test-websocket.js
 generate-test-jwt.js
+test-bedrock-agent.js
+test-bedrock-direct.py
+test-agent-draft.js
+test-agent-draft.py
+create-agent-version.py
+list-agent-methods.py
+update-alias.py
+bedrock-test-body.json
+invoke-claude-test.json
+response.json
+
+# Python virtual environment
+venv/
 
 # Package files
 package.json
