--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ langchain-aws = "^0.2.0"
 pandas = "2.1.1"
 streamlit = "^1.47.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
+moto = "^4.2.0"
+boto3-stubs = {extras = ["dynamodb", "events", "apigatewaymanagementapi", "bedrock-agent-runtime"], version = "^1.34.0"}
 
 [build-system]
 requires = ["poetry-core"]
