fix: Correct WebSocket URL - frontend now connects successfully
- Fixed WebSocket URL from non-existent vvg621xawg to vp8zwzpjpj
- Changed stage from prod to dev
- Updated .env and .env.production
- Rebuilt and redeployed frontend
- Connection now works (backend returns internal error, separate issue)

Status: Frontend ✅ | Backend ⚠️ (needs CloudWatch review)

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,7 +1,7 @@
 # CENTLI Frontend Production Environment Variables
 
 # WebSocket API Gateway URL
-VITE_WEBSOCKET_URL=wss://vvg621xawg.execute-api.us-east-1.amazonaws.com/prod
+VITE_WEBSOCKET_URL=wss://vp8zwzpjpj.execute-api.us-east-1.amazonaws.com/dev
 
 # REST API URL (if needed)
 VITE_API_URL=https://your-api-id.execute-api.us-east-1.amazonaws.com/prod
